syntax = "proto3";

option go_package = "pkg/auth";

// Service for auth processes
service AuthService {
    // Login method for requesting access token from edu platform
    rpc Login (LoginRequest) returns (LoginResponse) {};
    rpc CheckEmailAvailability(CheckEmailAvailabilityIn) returns (CheckEmailAvailabilityOut) {};
    // Send verification code to email and save data into pending table
    rpc SendCode (SendCodeIn) returns (SendCodeOut) {};
}


// Data for request JWT token for all access in our platform
message LoginRequest {
    // username can be just nickname or full email (nickanme@student.21-school.ru)
    string username = 1;
    // password from platform
    string password = 2;
}

// response JWT token for access
message LoginResponse {
    // String with jwt
    string jwt = 1;
}

message CheckEmailAvailabilityIn {
    string email = 1;
}

message CheckEmailAvailabilityOut {
    bool isAvailable = 1;
}

// Data for save in pending table
message SendCodeIn {
    // email to send code
    string email = 1;
}

// Response for SendCode
message SendCodeOut {
    // UUID of record from pending table
    string uuid = 1;
}